PYIC-6973: Refactor NINO test VCs